<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="title">Look at my GUI</string>
    <string name="click_button">"Click here"</string>
    <string name="click_checkBox">"Check this out!"</string>
    <string name="switch_box">"Switch on/off" </string>
    <string name="insert_text">"Type here" </string>
    <string name="email_message">"Enter your email address:"</string>
    <string name="email_here">Type your email here:</string>
    <string name="login_message">"LOGIN"</string>
    <string name="password_message">"Type your password:"</string>
    <string name="yourProfile_message">"Your profile"</string>
    <string name="yourName_message">Your name:</string>
    <string name="yourNameEditText">Enter your name</string>
    <string name="yourEmailTextView">Your email:</string>
    <string name="yourEmail_message">Enter your email</string>
    <string name="yourPicture_message">Your picture</string>
    <string name="textView_message">Click the botton above to take a picture</string>
    //Lab5
    <string name="chat_message">Go to chat</string>
    <string name="SendText">Send</string>
    <string name="ChatHint">Type here</string>
    <string name="ReceiveText">Receive</string>
    //Lab6
    <string name="GoToWeather">Go to Weather page</string>
    <string name="currentTemp">Current Temperature</string>
    <string name="minTemp">Minimum Temperature</string>
    <string name="maxTemp">Maximum Temperature</string>
    <string name="uvRating">UV</string>
    <string name="WeatherBtn">Go to Weather Forcast</string>

</resources>
