<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:gravity="fill"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/title"
        android:textSize="30dp"
      />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/mybutton"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:text="@string/click_button"
            />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/click_checkBox"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/imagebutton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:src="@drawable/flag"
            />

        <Switch
            android:id="@+id/switchbtn"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/switch_box" />

    </LinearLayout>



    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/insert_text"
        android:inputType="textPersonName"/>

</LinearLayout>