<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:text="@string/title"
        android:textSize="30dp"

        />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="1"
        android:text="@string/click_button" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_row="1"
        android:layout_columnSpan="1"
        android:layout_gravity="left"
        android:gravity="left"
        android:text="@string/click_checkBox"
        />

    <ImageButton
        android:id="@+id/imagebutton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="left"
        android:gravity="left"
        android:src="@drawable/flag"
       />



    <Switch
        android:id="@+id/switchbtn"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="left"
        android:gravity="left"
        android:text="@string/switch_box"
        />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="425dp"
        android:layout_height="50dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:inputType="textPersonName"
        android:text="@string/insert_text" />

</GridLayout>